<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.wikibot</groupId>
  <artifactId>wikibot</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>16</release>
        </configuration>
      </plugin>
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-dependency-plugin</artifactId>
      	<version>3.1.1</version>
      	<configuration>
      		<excludeArtifactIds>wiki-java</excludeArtifactIds>
      	</configuration>
      	<goals>
      		<goal>copy-dependencies</goal>
      	</goals>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>com.univocity</groupId>
  		<artifactId>univocity-parsers</artifactId>
  		<version>2.9.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-compress</artifactId>
  		<version>1.21</version>
  	</dependency>
  	<dependency>
  		<groupId>org.wikipedia</groupId>
  		<artifactId>wiki-java</artifactId>
  		<version>0.37-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>org.jsoup</groupId>
  		<artifactId>jsoup</artifactId>
  		<version>1.14.2</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-lang3</artifactId>
  		<version>3.12.0</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-io</groupId>
  		<artifactId>commons-io</artifactId>
  		<version>2.11.0</version>
  	</dependency>
  	<dependency>
  		<groupId>commons-cli</groupId>
  		<artifactId>commons-cli</artifactId>
  		<version>1.4</version>
  	</dependency>
  	<dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
  		<version>8.0.23</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-collections4</artifactId>
  		<version>4.4</version>
  	</dependency>
  	<dependency>
  		<groupId>com.thoughtworks.xstream</groupId>
  		<artifactId>xstream</artifactId>
  		<version>1.4.18</version>
  	</dependency>
  	<dependency>
  		<groupId>com.github.plural4j</groupId>
  		<artifactId>plural4j</artifactId>
  		<version>1.0.0</version>
  	</dependency>
  	<dependency>
  		<groupId>com.ibm.icu</groupId>
  		<artifactId>icu4j</artifactId>
  		<version>69.1</version>
  	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-text</artifactId>
  		<version>1.9</version>
  	</dependency>
  	<!-- https://stackoverflow.com/q/51094274 -->
  	<!--<dependency>
  		<groupId>xml-apis</groupId>
  		<artifactId>xml-apis</artifactId>
  		<version>2.0.2</version>
  	</dependency>-->
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-exec</artifactId>
  		<version>1.3</version>
  	</dependency>
  	<dependency>
  		<groupId>org.nibor.autolink</groupId>
  		<artifactId>autolink</artifactId>
  		<version>0.10.0</version>
  	</dependency>
  	<dependency>
  		<groupId>org.json</groupId>
  		<artifactId>json</artifactId>
  		<version>20210307</version>
  	</dependency>
  </dependencies>
  <properties>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
</project>